force-app/main/default/objects/Log_customer_validation__c/Log_customer_validation__c.object-meta.xml
<CustomObject>
    <label>Log de Cadastro</label>
    <nameField>
        <label>Nome do Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs de Cadastros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>