force-app/main/default/objects/Log_customer_validation__c/fields/CD_FONTE_CADASTRO_DATAMART__c.field-meta.xml
<CustomField>
    <fullName>CD_FONTE_CADASTRO_DATAMART__c</fullName>
    <formula>IF(CD_RESULTADO_DATAMART__c = '0', 'Sucesso', 'Insucesso')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CD_FONTE_CADASTRO_DATAMART</label>
    <type>Text</type>
</CustomField>