force-app/main/default/objects/Log_customer_validation__c/fields/CD_PROTOCOLO_DATAMART__c.field-meta.xml
<CustomField>
    <fullName>CD_PROTOCOLO_DATAMART__c</fullName>
    <label>CD_PROTOCOLO_DATAMART</label>
    <length>20</length>
    <type>Text</type>
</CustomField>