force-app/main/default/objects/Log_customer_validation__c/fields/CD_RESULTADO_DATAMART__c.field-meta.xml
<CustomField>
    <fullName>CD_RESULTADO_DATAMART__c</fullName>
    <label>CD_RESULTADO_DATAMART</label>
    <length>255</length>
    <type>Text</type>
</CustomField>