force-app/main/default/objects/Log_customer_validation__c/fields/CD_RETORNO_DATAMART__c.field-meta.xml
<CustomField>
    <fullName>CD_RETORNO_DATAMART__c</fullName>
    <label>CD_RETORNO_DATAMART</label>
    <length>255</length>
    <type>Text</type>
</CustomField>