force-app/main/default/objects/Log_customer_validation__c/fields/CustomerInteraction__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteraction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Interaction</label>
    <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>