force-app/main/default/objects/Log_customer_validation__c/fields/DS_CANAL_DATAMART__c.field-meta.xml
<CustomField>
    <fullName>DS_CANAL_DATAMART__c</fullName>
    <label>DS_CANAL_DATAMART</label>
    <length>255</length>
    <type>Text</type>
</CustomField>