force-app/main/default/objects/Log_customer_validation__c/fields/DS_DOCUMENTO_DATAMART__c.field-meta.xml
<CustomField>
    <fullName>DS_DOCUMENTO_DATAMART__c</fullName>
    <label>DS_DOCUMENTO_DATAMART</label>
    <length>20</length>
    <type>Text</type>
</CustomField>