force-app/main/default/objects/Log_customer_validation__c/fields/DS_TIPODOCUMENTO_DATAMART__c.field-meta.xml
<CustomField>
    <fullName>DS_TIPODOCUMENTO_DATAMART__c</fullName>
    <label>DS_TIPODOCUMENTO_DATAMART</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>Passaporte</fullName>
            </value>
            <value>
                <fullName>Documento Estrangeiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>