force-app/main/default/objects/Log_customer_validation__c/fields/FONTE_CADASTRO_DATAMART__c.field-meta.xml
<CustomField>
    <fullName>FONTE_CADASTRO_DATAMART__c</fullName>
    <label>FONTE_CADASTRO_DATAMART</label>
    <length>255</length>
    <type>Text</type>
</CustomField>