force-app/main/default/objects/Log_customer_validation__c/fields/LimitQuantityMonth__c.field-meta.xml
<CustomField>
    <fullName>LimitQuantityMonth__c</fullName>
    <label>Limite quantidade de linhas por mês</label>
    <length>30</length>
    <type>Text</type>
</CustomField>