force-app/main/default/objects/Log_customer_validation__c/fields/NU_LINHA_DATAMART__c.field-meta.xml
<CustomField>
    <fullName>NU_LINHA_DATAMART__c</fullName>
    <label>NU_LINHA_DATAMART</label>
    <length>80</length>
    <type>Text</type>
</CustomField>