force-app/main/default/objects/Log_customer_validation__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>