force-app/main/default/objects/Log_customer_validation__c/fields/TotalLimiteDeLinhas__c.field-meta.xml
<CustomField>
    <fullName>TotalLimiteDeLinhas__c</fullName>
    <label>Total limite de Linhas</label>
    <length>30</length>
    <type>Text</type>
</CustomField>